Fixed section height bug on ie11

--- a/src/styles/components/_section.scss
+++ b/src/styles/components/_section.scss
@@ -18,6 +18,7 @@
 
   &__content {
     width: 100%;
+    height: 100%;
     
     @include bp(M) {
       width: 60%;
